redireccion de pagina

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
 </head>
 <body>
     <div class="container mt-5">
@@ -29,6 +28,8 @@
                 <!-- Aquí se mostrarán los resultados de la consulta -->
             </table>
         </div>
+
+        <!-- Botón de descarga de la tabla -->
         <button id="descargarTabla" class="btn btn-success">Descargar Tabla</button>
 
     </div>
@@ -38,7 +39,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-
-<script src="index.js"></script>
+    <!-- Script personalizado para la funcionalidad del formulario y la tabla -->
+    <script src="index.js"></script>
 </body>
 </html>
