--- a/public/acumulado.html
+++ b/public/acumulado.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Consulta de Stock</title>
-  <link rel="stylesheet" href="Acumulado.css">
+  <link rel="stylesheet" href="css/acumulado.css">
 </head>
 <body>
   <div class="container">
@@ -29,5 +29,7 @@
     <div class="pagination" id="pagination"></div>
   </div>
 
+
+  <script src="js/acumulado.js"></script>
 </body>
 </html>
