--- a/public/acumulado.html
+++ b/public/acumulado.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,11 +25,16 @@
       <button type="submit">Consultar</button>
     </form>
 
-    <div id="resultados"></div>
+    <!-- Contenedor para las tablas generadas -->
+  
+
     <div class="pagination" id="pagination"></div>
+   
   </div>
 
-
+  <div id="resultados">
+    <!-- Aquí se insertarán las tablas generadas -->
+  </div>
   <script src="js/acumulado.js"></script>
 </body>
 </html>
