--- a/public/acumulado.html
+++ b/public/acumulado.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Consulta de Stock</title>
-  <link rel="stylesheet" href="css/acumulado2.css">
+  <link rel="stylesheet" href="css/acumulado.css">
   <link rel="stylesheet" href="css/footer.css">
   <!-- Iconos -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
@@ -87,6 +87,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-  <script src="js/acumulado2.js"></script>
+  <script src="js/acumulado.js"></script>
 </body>
 </html>
